Cleanup jdk1+ & javafx